$Id: ChangeLog,v 1.74 2004/05/30 14:47:14 manuelbi Exp $

2004-06-06 Herman Oudejans <hn.oudejans@quicknet.nl>
	* Removed all openMSX 0.3.4 support
	* Prepared GUI for minframeskip setting support.

2004-05-29 Manuel Bilderbeek <manuel@msxnet.org>
	* Added support for muting individual channels via channel mode

2004-05-28 Maarten ter Huurne <maarten@treewalker.org>
	* Released openmsx-catapult-0.4.0-R1.

2004-05-28 Herman Oudejans <hn.oudejans@quicknet.nl>
	* Windows executable is now created in derived/bin, which is 
	   better for package creation.
	* Windows build defaults now to the Release version.
	* Disabled the m_commands assert. When no commands are
	   available, the GetPendingCommand function will return an empty
	   string. Effectively, this means that the reception of a reply without
	   a sent command will simply be ignored.

2004-05-09 Maarten ter Huurne <maarten@treewalker.org>
	* Ported system probe from openMSX to Catapult.

2004-05-09 Herman Oudejans <hn.oudejans@quicknet.nl>
	* made the windows build system work with the version info
	* updated the README to point out the manuals	

2004-05-08 Maarten ter Huurne <maarten@treewalker.org>
	* Ported build system stuff from openMSX to Catapult.
	  Includes handling of version info.
	* Implemented "make dist".

2004-05-06 Herman Oudejans <hn.oudejans@quicknet.nl>
	* Added manuals (thx to Manuel).

2004-04-30 Herman Oudejans <hn.oudejans@quicknet.nl>
	* the m_command != NULL assert should be fixed now. I tried 
	   to reproduce the assert but just couldn't.

2004-04-27 Herman Oudejans <hn.oudejans@quicknet.nl>
	* Personal share dir is now also used in windows to find machines
	   and extensions
	* Items added to history are now converted to the native (back)slash.
	* file filters with capitals extensions added. .DSK and alike should now be
	   also found in linux.
	* If normal tape (wave) is used and the machine is equiped with a
	   cassetteport it's automaticly plugged.
