@@ -1,7 +1,7 @@
 <?xml version="1.0"?>
-<!-- generated by wxGlade 0.3.1 on Sun Jun 27 19:07:06 2004 -->
+<!-- generated by wxGlade 0.3.2 on Thu Aug 26 17:58:40 2004 -->
 
-<application path="../../resources/dialogs/session.xrc" name="" class="" option="0" language="XRC" top_window="" encoding="ISO-8859-1" use_gettext="0" overwrite="0">
+<application path="../../resources/dialogs/session.xrc" name="" class="" option="0" language="XRC" top_window="" encoding="ISO-8859-1" use_gettext="0" overwrite="0" use_new_namespace="0">
     <object class="wxPanel" name="SessionPage" base="EditTopLevelPanel">
         <style>wxTAB_TRAVERSAL</style>
         <object class="wxBoxSizer" name="SessionPageSizer" base="EditBoxSizer">
@@ -21,7 +21,7 @@
                         </object>
                     </object>
                     <object class="sizeritem">
-                        <flag>wxEXPAND</flag>
+                        <flag>wxEXPAND|wxADJUST_MINSIZE</flag>
                         <border>0</border>
                         <option>0</option>
                         <object class="wxComboBox" name="MachineList" base="EditComboBox">
@@ -43,7 +43,7 @@
                         </object>
                     </object>
                     <object class="sizeritem">
-                        <flag>wxEXPAND</flag>
+                        <flag>wxEXPAND|wxADJUST_MINSIZE</flag>
                         <border>0</border>
                         <option>1</option>
                         <object class="wxListBox" name="ExtensionList" base="EditListBox">
